codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_footer_wrap.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                    
  问 题  1/2（ 2 个 未 回 答 ）                             
  Choose an option.                                 
                                                    
    1. Option 1  First choice.                      
  › 2. Option 2  Second choice.                     
    3. Option 3  Third choice.                      
                                                    
  tab 添 加 备 注  | enter 提 交 当 前 答 案  | ←/→ 切 换 问 题   
  esc 中 断
