codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  问 题  1/1（ 1 个 未 回 答 ）                                                                                                 
  Share details.                                                                                                        
                                                                                                                        
  › 请 输 入 答 案 （ 可 选 ）                                                                                                   
                                                                                                                        
                                                                                                                        
                                                                                                                        
  enter 提 交 当 前 答 案  | esc 中 断
